--- a/style.css
+++ b/style.css
@@ -3,17 +3,18 @@ body{
     padding: 0;
     box-sizing: border-box;
     background-color: black;
+    color: rgb(179, 185, 190);
 }
+/* logo and Menu */
 .Menu,.Menu ol,.Menu .logo{
-    display: flex;  
+    display: flex; 
+    margin-top: 1%; 
    
 }
 .logo{
     margin: 10px 100px;
-    line-height: 40px;
-    font-size: 40px;
-    padding-right: 20%;
-    color: rgb(179, 185, 190);
+      font-size: 40px;
+    padding-right: 15%;
 }
 .logo img{
     width: 100px;
@@ -31,4 +32,53 @@ body{
     font-size: 20px;
     color: rgb(179, 185, 190);
     
+}
+/* Logo and Menu End  */
+.home{
+    display: flex;
+}
+.home .word{
+    width: 70%;
+    margin-left: 10%;
+}
+.home {
+    padding-right: 5%;
+}
+.home h5{
+    color: rgb(226, 58, 94);
+    padding-top: 20%;
+    
+}
+.home h5,.home h1{
+    margin: 0;
+}
+.home button{
+    border-radius:50px ;
+    height: 40px;
+    margin: 10px 10px;
+    padding: 10px ;
+    border-style: none;
+    font-size: 15px;
+    box-shadow: 3px 0px 26px -6px rgba(255, 255, 255, 0.25);
+
+
+
+
+}
+.home button:first-of-type{
+    width: 100px;
+    background-color: rgb(224, 82, 15);
+    color: white;
+
+    
+}
+.home button:last-of-type{
+    width: 130px;
+    background-color: orange;
+    color:black;
+}
+.home img{
+    float: right;
+    width: 30%;
+    margin: 5% ;
 }
