--- a/style.css
+++ b/style.css
@@ -9,11 +9,11 @@ body{
 .Menu,.Menu ol,.Menu .logo{
     display: flex; 
     margin-top: 1%; 
-   
+  
 }
 .logo{
     margin: 10px 100px;
-      font-size: 40px;
+    font-size: 40px;
     padding-right: 15%;
 }
 .logo img{
@@ -82,3 +82,53 @@ body{
     width: 30%;
     margin: 5% ;
 }
+/* Service  */
+#Service{
+    display: flex;
+}
+.paragraph{
+    margin: 0 7%;
+    width: 30%;
+}
+.paragraph button{
+    background-color: rgb(245, 96, 10);
+    border-radius: 20px;
+    padding: 10px 15px;
+    color: white;
+    border-style: none;
+    text-align: center;
+}
+.first-card,.second-card{
+   display: flex;
+}
+.first-card .card-1,.first-card .card-2,.second-card .card-3,.second-card .card-4{
+    background-color: white;
+    border-radius: 5%;
+    text-align: center;
+    
+}
+.first-card .card-1,.first-card .card-2,.second-card .card-3,.second-card .card-4{
+    margin: 0 2% 5% 5%;
+    height: 200px;
+    width: 350px;
+}
+.first-card .card-1 span i,.first-card .card-2 span i,.second-card .card-3 span i,.second-card .card-4 span i{
+    margin: 10px;
+    background-color: red;
+   color: white;
+   font-size: 20px;
+   padding-top: 22px ;
+   border-radius: 50%;
+   width: 60px;
+   height: 40px;
+}
+.first-card .card-2 span i{
+    background-color: aquamarine;
+}
+.second-card .card-3 span i{
+    background-color: rgb(247, 0, 255);
+}
+.second-card .card-4 span i{
+    background-color: chartreuse;
+}
+/* Service End */
