--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ body{
     color: rgb(179, 185, 190);
 }
 /* logo and Menu */
+.Menu{
+    position: fixed;
+}
+
 .Menu,.Menu ol,.Menu .logo{
     display: flex; 
     margin-top: 1%; 
@@ -34,12 +38,16 @@ body{
     
 }
 /* Logo and Menu End  */
+
+/*Home*/
 .home{
     display: flex;
+
 }
 .home .word{
     width: 70%;
-    margin-left: 10%;
+    margin: 10%;
+
 }
 .home {
     padding-right: 5%;
@@ -80,11 +88,15 @@ body{
 .home img{
     float: right;
     width: 30%;
-    margin: 5% ;
+    margin: 10% 5% 5% 0;
 }
+/*Home End*/
+
 /* Service  */
 #Service{
     display: flex;
+    flex-wrap: wrap;
+    margin-top: 7%;
 }
 .paragraph{
     margin: 0 7%;
@@ -105,7 +117,7 @@ body{
     background-color: white;
     border-radius: 5%;
     text-align: center;
-    
+   
 }
 .first-card .card-1,.first-card .card-2,.second-card .card-3,.second-card .card-4{
     margin: 0 2% 5% 5%;
@@ -132,3 +144,35 @@ body{
     background-color: chartreuse;
 }
 /* Service End */
+
+/* About */
+#About{
+    margin: 10% 0;
+}
+#About img{
+    width: 500px;
+    float: left;
+    margin: 5% ;
+    border-radius: 10px;
+}
+#About .context{
+    margin: 6% 10%;
+}
+#About h5{
+    color: orangered;
+}
+#About button{
+    width: 100px;
+    border-radius: 50px;
+    height: 30px;
+    margin-left: 2%;
+    background-color: rgb(247, 65, 65);
+    color: white;
+    border-style: none;
+    box-shadow: rgba(250, 247, 247, 0.35) 0px 5px 15px;
+}
+#About button:last-child{
+    background-color: yellow;
+    color: black;
+    width: 120px;
+}
