--- a/style.css
+++ b/style.css
@@ -244,3 +244,86 @@ body{
     font-size: 30px;
     margin: 10% 0;
 }
+/* Portfolio finished  */
+
+/* footer */
+#Team {
+    margin: 10%;
+    text-align: center;
+}
+#Team h4{
+    color: rgb(197, 82, 40);
+    margin-bottom: -10px;
+}
+#Team .cards{
+    display: flex;
+}
+#Team .cards .card1,#Team .cards .card2{
+    width: 60%;
+   
+    margin: 5% 0 0 5%;
+} 
+#Team .cards .card1,#Team .cards .card2{
+    text-align: left;
+}
+#Team .cards .card2{
+   margin-right: 5%;
+}
+#Team .cards  footer{
+    margin-bottom: 20px;
+    color: rgb(122, 106, 77);
+}
+#Team .cards  span{
+    margin-left: 10px;
+    font-size: 20px;
+    color: rgb(248, 251, 252);
+}
+#Team .cards  span:nth-of-type(2){
+    color: skyblue;
+}
+#Team .cards  span:nth-of-type(3){
+    color: rgb(243, 193, 86);
+}
+#Team .cards  span:last-child{
+    color: rgb(146, 58, 228);
+}
+#Team .cards img{
+    float: left;
+    width: 250px;
+    height: 250px;
+    border-radius: 20px;
+    margin-right: 25px;
+}
+/* Meet Our Team  */
+.MeetOurTeam h5,.MeetOurTeam h3{
+    text-align: center;
+    
+}
+.MeetOurTeam h5{
+    margin-top: 5%;
+margin-bottom: -15px;
+color: rgb(182, 74, 35);
+}
+.MeetOurTeam .cards{
+    display: flex;
+    margin-bottom: 15%;
+}
+.MeetOurTeam .cards .card1,.MeetOurTeam .cards .card2,.MeetOurTeam .cards .card3{
+    width: 20%;
+    margin-left: 10%;
+}
+.MeetOurTeam .cards  img{
+    width: 50px;
+    height: 50px;
+    margin-top: 10px;
+    border-radius: 50%;
+    border-style: none;
+    float: left;
+}
+.MeetOurTeam .cards .card1 h4,.MeetOurTeam .cards .card2 h4,.MeetOurTeam .cards .card3 h4{
+    margin-left: 85px;
+    margin-top: -10px;
+    color: rgb(126, 124, 121);
+
+}
+
