--- a/style.css
+++ b/style.css
@@ -255,39 +255,38 @@ body{
     color: rgb(197, 82, 40);
     margin-bottom: -10px;
 }
-#Team .cards{
+#Team .cards,#Team .cards-2{
     display: flex;
 }
-#Team .cards .card1,#Team .cards .card2{
+#Team .cards .card1,#Team .cards .card2,#Team .cards-2 .card1,#Team .cards-2 .card2{
     width: 60%;
-   
-    margin: 5% 0 0 5%;
-} 
-#Team .cards .card1,#Team .cards .card2{
     text-align: left;
+    margin: 5%  ;
+} 
+
+#Team .cards .card2,#Team .cards-2 .card2{
+   margin:  5% 6%;
+   
 }
-#Team .cards .card2{
-   margin-right: 5%;
-}
-#Team .cards  footer{
+#Team .cards  footer,#Team .cards-2  footer{
     margin-bottom: 20px;
     color: rgb(122, 106, 77);
 }
-#Team .cards  span{
+#Team .cards  span,#Team .cards-2  span{
     margin-left: 10px;
     font-size: 20px;
     color: rgb(248, 251, 252);
 }
-#Team .cards  span:nth-of-type(2){
+#Team .cards  span:nth-of-type(2),#Team .cards-2  span:nth-of-type(2){
     color: skyblue;
 }
-#Team .cards  span:nth-of-type(3){
+#Team .cards  span:nth-of-type(3),#Team .cards-2  span:nth-of-type(3){
     color: rgb(243, 193, 86);
 }
-#Team .cards  span:last-child{
+#Team .cards  span:last-child,#Team .cards-2  span:last-child{
     color: rgb(146, 58, 228);
 }
-#Team .cards img{
+#Team .cards img,#Team .cards-2 img{
     float: left;
     width: 250px;
     height: 250px;
@@ -304,7 +303,7 @@ body{
 margin-bottom: -15px;
 color: rgb(182, 74, 35);
 }
-.MeetOurTeam .cards{
+.MeetOurTeam .cards,.MeetOurTeam .cards{
     display: flex;
     margin-bottom: 15%;
 }
