--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     margin :0;
     padding: 0;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
     box-sizing: border-box;
     background-color: black;
     color: rgb(179, 185, 190);
@@ -8,12 +9,15 @@ body{
 /* logo and Menu */
 .Menu{
     position: fixed;
+    background-color:black;
+    width: 100%;
+    height:     60px;
 }
 
 .Menu,.Menu ol,.Menu .logo{
     display: flex; 
-    margin-top: 1%; 
-  
+    padding-top: 1px; 
+    
 }
 .logo{
     margin: 10px 100px;
@@ -21,7 +25,7 @@ body{
     padding-right: 15%;
 }
 .logo img{
-    width: 100px;
+    width: 50px;
     background-color: white;
     border-radius: 50%;
     margin-right: 15px;
@@ -113,6 +117,7 @@ body{
 .first-card,.second-card{
    display: flex;
 }
+
 .first-card .card-1,.first-card .card-2,.second-card .card-3,.second-card .card-4{
     background-color: white;
     border-radius: 5%;
@@ -448,6 +453,41 @@ color: rgb(182, 74, 35);
     padding: 10px 20px;
     border-style: none;
 }
+.introDownload{
+    margin: 0 auto;
+    width: 500px;
+    text-align: center;
+}
+.introDownload button{
+    background: red;
+    border-radius: 25px;
+    width: 150px;
+    height: 30px;
+    outline: none;
+    border-style: none;
+    color: white;
+    text-align: center;
+    margin-right: 20px;
+}
+.introDownload button:last-of-type{
+    background-color: green;
+}
+footer ol{
+    list-style: none;
+    display: flex;
+    margin-top: 50px;
+} 
+
+footer ol li a{
+    color: rgb(179, 185, 190);
+    text-decoration: none;
+    margin-right: 20px;
+}
+/* Responsive */
+
+
+
+
 
 
 
